# rustrimmer

./: .gitignore  Cargo.toml  README.md
src/: io_utils.rs  lib.rs  main.rs  trim.rs
tests/: cli.rs  create_test_data.sh  generate_test_fastq.py  sample.fastq
