[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
bio = "2.3"
flate2 = "1.0"
rayon = "1.7"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tempfile = "3.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true